minor alignment fix

--- a/src/sections/Hero/HeroStyles.module.css
+++ b/src/sections/Hero/HeroStyles.module.css
@@ -71,6 +71,7 @@
 
 .description {
   max-width: 24ch;
+  align-self: center;
 }
 
 .info {
